# chippy

./: .pre-commit-config.yaml  README.md  eslint.config.js  index.html  mise.toml  package.json
.claude/: settings.local.json
.github/workflows/: pre-commit.yml  release.yml
src/: app.tsx  main.ts  styles.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: agent.tsx  balloon.tsx  context-menu.tsx  history-panel.tsx  settings-panel.tsx
src/lib/: agent.ts  animator.ts  balloon.ts  chat-input.ts  clickthrough.ts  history.ts  llm.ts  queue.ts  settings-panel.ts
